src/components/Activity/styles/activitylist.scss
@import 'styles/constants.scss';

div.activity-list-item {
	width: 100%;
	display: flex;
	align-items: center;
	
	.icon {
		flex: 1;
		background-color: transparent;
		display: flex;
		flex-direction: column;
		justify-content: center;
		img {
			max-width: 100%;
		}
	}

	.process-code {
		flex: 2;
	}

	.process-name {
		flex: 3;
	}

	.product-code {
		flex: 3;
	}

	.runs {
		flex: 3;
	}
	
	.outputs {
		flex: 3;
	}
	
	.view-all-tasks {
		cursor: pointer;
		flex: 3;
		color: $primary-light;
	}

	.download {
		flex: 1;
		cursor: pointer;
        visibility: hidden;
	}
	
	&:hover .download{
		visibility: visible;
	}
}

